// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayButton should render audio correctly without duration details 1`] = `
.c2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 80px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 80px;
}

.c0:hover,
.c0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c0 > svg {
  fill: #FFFFFF;
  height: 24px;
  width: 24px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Play audio, "Dog chases cat.", null
  </span>
  <svg
    class="c2"
    focusable="false"
    height="12px"
    viewBox="0 0 13 12"
    width="13px"
  >
    <path
      d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
    />
    <path
      d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
    />
  </svg>
</button>
`;

exports[`PlayButton should render audio indicator correctly 1`] = `
.c2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 80px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 80px;
}

.c0:hover,
.c0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c0 > svg {
  fill: #FFFFFF;
  height: 24px;
  margin-top: 0.5rem;
  width: 24px;
}

.c3 {
  display: block;
  margin-top: 0.5rem;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Play audio, "Dog chases cat.", 2:15
  </span>
  <svg
    class="c2"
    focusable="false"
    height="12px"
    viewBox="0 0 13 12"
    width="13px"
  >
    <path
      d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
    />
    <path
      d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
    />
  </svg>
  <time
    class="c3"
    datetime="PT2M15S"
  >
    2:15
  </time>
</button>
`;

exports[`PlayButton should render video by default 1`] = `
.c2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 80px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 80px;
}

.c0:hover,
.c0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c0 > svg {
  fill: #FFFFFF;
  height: 24px;
  width: 24px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Play video, "Dog chases cat.", null
  </span>
  <svg
    class="c2"
    focusable="false"
    height="12px"
    viewBox="0 0 32 32"
    width="12px"
  >
    <polygon
      points="3,32 29,16 3,0"
    />
  </svg>
</button>
`;

exports[`PlayButton should render video correctly without duration details 1`] = `
.c2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 80px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 80px;
}

.c0:hover,
.c0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c0 > svg {
  fill: #FFFFFF;
  height: 24px;
  width: 24px;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Play video, "Dog chases cat.", null
  </span>
  <svg
    class="c2"
    focusable="false"
    height="12px"
    viewBox="0 0 32 32"
    width="12px"
  >
    <polygon
      points="3,32 29,16 3,0"
    />
  </svg>
</button>
`;

exports[`PlayButton should render video indicator correctly 1`] = `
.c2 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c0 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 80px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 80px;
}

.c0:hover,
.c0:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c0 > svg {
  fill: #FFFFFF;
  height: 24px;
  margin-top: 0.5rem;
  width: 24px;
}

.c3 {
  display: block;
  margin-top: 0.5rem;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Play video, "Dog chases cat.", 2:15
  </span>
  <svg
    class="c2"
    focusable="false"
    height="12px"
    viewBox="0 0 32 32"
    width="12px"
  >
    <polygon
      points="3,32 29,16 3,0"
    />
  </svg>
  <time
    class="c3"
    datetime="PT2M15S"
  >
    2:15
  </time>
</button>
`;
